--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -44,6 +44,8 @@
         "react/jsx-filename-extension": [1, {"extensions": [".tsx"]}],
         "import/prefer-default-export": "off",
         "no-unused-expressions": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react/prop-types": "off",
         "@typescript-eslint/no-unused-expressions": ["error"]
     },
     "settings": {
